@@ -43,6 +43,7 @@
  * #907 (Notation)
  * #908 (Documentation: change titles)
  * #909 (Wrong argument type in the API doc)
+ * #910 (Graph of a d-dimensionnal distribution)
 
 == 1.9 release (2017-04-18) == #release-1.9
 
